# neuclid

./: CMakeLists.txt  main.cpp
assets/: map.txt  stone.xcf
include/: game.hpp  graphics.hpp  la.hpp  world.hpp
src/: game.cpp  graphics.cpp  world.cpp
